force-app/main/default/objects/JBCXM__SurveyParticipant__c/JBCXM__SurveyParticipant__c.object-meta.xml
<CustomObject>
    <description>This is used to store survey participants</description>
    <label>Survey Participant</label>
    <nameField>
        <displayFormat>SuP-{0000}</displayFormat>
        <label>Survey Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>