force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>