force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__AnonymousTempUser__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AnonymousTempUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Temp User</label>
    <type>Checkbox</type>
</CustomField>