force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__AnonymousTokenId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AnonymousTokenId__c</fullName>
    <formula>JBCXM__SurveyMaster__r.JBCXM__AnonymousTokenId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anonymous TokenId</label>
    <type>Text</type>
</CustomField>