force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__AssociatedObjectRecordId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectRecordId__c</fullName>
    <label>Associated object record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>