force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Browser__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Browser__c</fullName>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>