force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__ContextMessage__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ContextMessage__c</fullName>
    <label>ContextMessage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>