force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__ContextURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ContextURL__c</fullName>
    <label>ContextURL</label>
    <type>Url</type>
</CustomField>