force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__CSTask__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CSTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The task used to send survey.</description>
    <label>CSTask</label>
    <referenceTo>JBCXM__CSTask__c</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>