force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__DeliveryResponse__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DeliveryResponse__c</fullName>
    <label>Delivery Response</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>