force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayName__c</fullName>
    <description>Survey participant name.</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>