force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__DoPartialSubmit__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DoPartialSubmit__c</fullName>
    <description>Whether this participant&apos;s partially saved response is eligible for automatic submission or not.</description>
    <formula>IF(AND(ISPICKVAL(JBCXM__ResponseStatus__c,&quot;PARTIALLY_SAVED&quot;),OR(JBCXM__SurveyMaster__r.JBCXM__IsExpired__c,AND(NOT(ISBLANK(JBCXM__SurveyMaster__r.JBCXM__DaysToAutoSubmit__c)),NOT(ISBLANK(JBCXM__LastResponseRecordTime__c)),DATEVALUE(JBCXM__LastResponseRecordTime__c+JBCXM__SurveyMaster__r.JBCXM__DaysToAutoSubmit__c) &lt; Today()))),true,false)</formula>
    <label>Do Partial Submit</label>
    <type>Checkbox</type>
</CustomField>