force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Email__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Email__c</fullName>
    <formula>JBCXM__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>