force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__EmailOpenURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailOpenURL__c</fullName>
    <formula>JBCXM__SurveyMaster__r.JBCXM__EmailOpenURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailOpenURL</label>
    <type>Text</type>
</CustomField>