force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__EmailSentCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailSentCount__c</fullName>
    <description>To know how many time you sent the survey to participant.</description>
    <label>Email Sent Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>