force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__EmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailSentDate__c</fullName>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>