force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__FirstName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FirstName__c</fullName>
    <description>Participant first name.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>