force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__GSCase__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>