force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__GSOpportunity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>