force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__InternalSubmissionBy__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InternalSubmissionBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal submission user</description>
    <label>Internally submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Survey internal submission user</relationshipLabel>
    <relationshipName>SurveyInternalResponseUser</relationshipName>
    <type>Lookup</type>
</CustomField>