force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__InternalSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InternalSubmissionDate__c</fullName>
    <label>Internal submission date</label>
    <type>DateTime</type>
</CustomField>