force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__IsInternallySubmitted__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsInternallySubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is internally submitted</label>
    <type>Checkbox</type>
</CustomField>