force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__IsRespondedEventPublished__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsRespondedEventPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether responded event is published to event system.</description>
    <label>Is Responded Event Published.</label>
    <type>Checkbox</type>
</CustomField>