force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__LastResponseRecordTime__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastResponseRecordTime__c</fullName>
    <description>Time when last response was recorded.</description>
    <label>Last Response Record Time</label>
    <type>DateTime</type>
</CustomField>