force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Opened__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether the user visit the survey page or not.</description>
    <label>Email Opened</label>
    <type>Checkbox</type>
</CustomField>