force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__PartialResponse__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PartialResponse__c</fullName>
    <description>To store partially saved response.</description>
    <label>Partially Saved Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>