force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Relationship__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship</description>
    <label>Relationship</label>
    <referenceTo>JBCXM__GSRelationship__c</referenceTo>
    <relationshipLabel>Survey Participant</relationshipLabel>
    <relationshipName>SurveyParticipant</relationshipName>
    <type>Lookup</type>
</CustomField>