force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__RelationshipContact__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship Contact</description>
    <label>Relationship Contact</label>
    <referenceTo>JBCXM__GSRelationshipContacts__c</referenceTo>
    <relationshipLabel>Survey Participant</relationshipLabel>
    <relationshipName>SurveyParticipant</relationshipName>
    <type>Lookup</type>
</CustomField>