force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Responsed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Responsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether the user respond to the survey or not.</description>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>