force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__ResponseURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ResponseURL__c</fullName>
    <description>URL to preview survey response.</description>
    <formula>IF((JBCXM__Responsed__c == true),HYPERLINK(LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390))+&apos;apex/JBCXM__SurveyResponse?mode=REPORT_PREVIEW&amp;surveyId=&apos;+JBCXM__SurveyMaster__c+&apos;&amp;pId=&apos;+Id, &apos;ResponseUrl&apos;),null)</formula>
    <label>Response URL</label>
    <type>Text</type>
</CustomField>