force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Role__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Role__c</fullName>
    <label>Role</label>
    <length>128</length>
    <type>Text</type>
</CustomField>