force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Scheduled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether the distribution(contact) record  was scheduled or not.</description>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>