force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScheduledJobId__c</fullName>
    <description>To know in which job the participant was scheduled.</description>
    <label>Scheduled Job Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>