force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Sent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether email was sent or not.</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>