force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SentEmail__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SentEmail__c</fullName>
    <label>SentEmail</label>
    <type>Email</type>
</CustomField>