force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SurveyDistributionScheduleId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyDistributionScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Distribution Schedule</label>
    <referenceTo>JBCXM__SurveyDistributionSchedule__c</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>