force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SurveyId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyId__c</fullName>
    <description>To store the Survey Id</description>
    <formula>JBCXM__SurveyMaster__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SurveyId</label>
    <type>Text</type>
</CustomField>