force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SurveyOpened__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyOpened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Opened</label>
    <type>Checkbox</type>
</CustomField>