force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SurveyOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyOpenedDate__c</fullName>
    <label>Survey Opened Date</label>
    <type>DateTime</type>
</CustomField>