force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SurveyTitle__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyTitle__c</fullName>
    <formula>JBCXM__SurveyMaster__r.JBCXM__Title__c</formula>
    <label>Survey Title</label>
    <type>Text</type>
</CustomField>