force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__SurveyURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyURL__c</fullName>
    <description>To store the survey published URL</description>
    <formula>JBCXM__SurveyMaster__r.JBCXM__PublishedURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SurveyURL</label>
    <type>Text</type>
</CustomField>