force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__TestUser__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether participant is test user or not</description>
    <label>Test User</label>
    <type>Checkbox</type>
</CustomField>