force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Undelivered__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Undelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether mail was delivered successfully or not.</description>
    <label>Email Undelivered</label>
    <type>Checkbox</type>
</CustomField>