force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__UniqueParticipantKey__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UniqueParticipantKey__c</fullName>
    <description>This field contains unique key(surveyId_copilotParticipantId) for Copilot survey to avoid duplicate participant creation.</description>
    <externalId>true</externalId>
    <label>Unique Participant Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>