force-app/main/default/objects/JBCXM__SurveyParticipant__c/fields/JBCXM__Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether the user is unsubscribed for this survey.</description>
    <label>Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>